# fvm

./: .gitignore  Cargo.toml  ReadME.md
src/: alias.rs  doctor.rs  download_release.rs  installation_path.rs  main.rs  progress_bar.rs  releases.rs  symlink.rs
