[package]
name = "fvm"
version = "0.1.0"
authors = ["Trayan R <traqn02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.125"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-macro = "0.3.13"
url = "2.2.1"
tar = "0.4"
xz = "0.1.0"

[[bin]]
name = "fvm"
path = "src/main.rs"

[[bin]]
name = "__fmv_completion"
path = "src/completion.rs"